# rag-document-qa

./: .env.example  .gitignore  README.md  docker-compose.yaml  shared_config.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  ask.py  chat.py  deps.py  router.py  sessions.py  upload.py
backend/app/schemas/: __init__.py  ask.py  chat.py  session.py  upload.py
backend/app/services/extraction/: __init__.py  base.py  ocr.py  pdf.py  text.py
backend/app/services/ner/: __init__.py  base.py  spacy_extractor.py
backend/app/services/qa/: __init__.py  base.py  cloud.py  local.py
backend/app/services/rag/: chunker.py  embedder.py  pipeline.py  store.py
backend/app/services/session/: __init__.py  models.py  service.py  store.py
backend/tests/: conftest.py  test_config.py  test_integration.py  test_pdf_extraction.py
backend/tests/api/: conftest.py  test_ask.py  test_health.py  test_upload.py
backend/tests/extraction/: __init__.py  conftest.py  test_ocr_extraction.py  test_pdf_extraction.py  test_text_extraction.py
backend/tests/ner/: __init__.py  conftest.py  test_spacy_extractor.py
backend/tests/qa/: __init__.py  test_qa.py
backend/tests/rag/: __init__.py  conftest.py  test_chunker.py  test_embedder.py  test_pipeline.py  test_store.py
backend/tests/session/: conftest.py  test_session_api.py
docs/: IMPLEMENTATION_PLAN.md  TechAssignment_AI_Backend_Developer.md
dummy_docs/rag_test/: Natural-Questions-Filtered.txt  example_document.txt  meteorology_climate_guide.txt  names_and_jobs.txt
frontend/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
frontend/components/: config_section.py  ner_highlighting.py
frontend/static/css/: ner.css
