[project]
name = "backend"
version = "0.1.0"
description = "Backend for RAG document QA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "easyocr>=1.7.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sentence-transformers>=5.3.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]
